# fake-news-detection-lr

./: README.md  flake.nix  main.py  pyproject.toml
util/: convert_xlsx_to_jsonl.py
