[project]
name = "fake-news-detection-lr"
version = "0.1.0"
description = "LR to classfiy fake-news"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
]

[project.scripts]
xlsx-to-jsonl = "util.convert_xlsx_to_jsonl:main"
