[project]
name = "fake-news-detection-lr"
version = "0.1.0"
description = "LR to classfiy fake-news"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scikit-learn>=1.9.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
xlsx-to-jsonl = "util.convert_xlsx_to_jsonl:main"
analyze-data = "util.data_analysis:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["util*"]
